<resources>
    <string name="app_name">WalkWalkRevolution</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_tab">Home</string>
    <string name="routes_tab">Routes</string>
    <string name="team_tab">Team</string>
    <string name="mock_tab">Mock</string>

    <string name="general_placeholder">{{Placeholder}}</string>

    <string name="step_placeholder">5000</string>
    <string name="dist_placeholder">3.5 mi</string>
    <string name="time_placeholder">1:30:20</string>

    <string name="step_count_string">Steps: </string>
    <string name="distance_string">Distance:</string>
    <string name="Today_string">Today</string>
    <string name="start_string">Start new walk/run</string>
    <string name="stop_string">Stop walk/run</string>
    <string name="intent_walk_string">Current/last walk</string>
    <string name="time_string">Time:</string>
    <string name="start_loc"> Start: </string>

    <string name="dist_format">%.2f mi</string>
...
    <string name="last_name_text">Last Name</string>
    <string name="gmail_text">GMail</string>
    <string name="signin_button_text">Sign-In</string>
    <string name="height_text">Please enter your height</string>
    <string name="foot_text">ft</string>
    <string name="inch_text">in</string>
    <string name="save_button_text">Save</string>
    <string name="sign_up_text">Sign-Up</string>
    <string name="title_activity_route_info">RouteInfoActivity</string>

    <string name="step_count_button_text">Set Step Count</string>
    <string name="step_count_hint">Stop Count</string>
    <string name="hours_text">hrs</string>
    <string name="minutes_text">mins</string>
    <string name="seconds_text">secs</string>
    <string name="set_time_text">Set Time</string>
    <string name="toggle_mock_text_off">Start Mocking</string>
    <string name="toggle_mock_text_on">Stop Mocking</string>

    <string name="enter_route_info_title">Route Information</string>

    <string name="route_features_title">Route Features</string>
    <string name="route_type_label">Type:</string>
...
