...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editStepCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_set_step_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_count_button_text" />

        <LinearLayout
            android:layout_width="wrap_content"
...
            android:id="@+id/set_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time_text" />

        <Button
            android:id="@+id/toggle_mock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_mock_text_off" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
