...
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/table_text_padding"
            android:stretchColumns="1"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <TableRow
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_count_string"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/walk_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/step_placeholder"
                    android:textSize="@dimen/home_text_size" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_string"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/walk_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/dist_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>
...
